--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "license": "MIT",
   "scripts": {
     "build": "tsc",
-    "prepublishOnly": "yarn build"
+    "prepublishOnly": "yarn build",
+    "format": "prettier --config prettierrc.js --write ."
   },
   "bin": "dist/cli.js",
   "files": [
@@ -13,6 +14,7 @@
   ],
   "devDependencies": {
     "@types/node": "^20.14.2",
+    "prettier": "^3.3.3",
     "ts-node": "^10.9.2",
     "typescript": "^5.4.5"
   },
